--- a/ui-bundle/layouts/default.hbs
+++ b/ui-bundle/layouts/default.hbs
@@ -155,6 +155,7 @@
                 {{/each}}
             </ul>
         {{/if}}
+        <img style="overflow: hidden; border-radius: 50%; margin-top: 20px" width="100px" src="https://img.hhcdn.ru/photo/800001174.png?t=1771756006&h=dtK372C-a7-9KgZ7b9-9qg" alt="avatar">
     </div>
 </div>
 
@@ -188,6 +189,7 @@
                 </ul>
             {{/if}}
         </nav>
+        <img style="overflow: hidden; border-radius: 50%; margin-top: 20px" src="https://img.hhcdn.ru/photo/800001174.png?t=1771756006&h=dtK372C-a7-9KgZ7b9-9qg" alt="avatar">
     </aside>
 
     <!-- Content -->
